--- a/src/App.css
+++ b/src/App.css
@@ -39,6 +39,10 @@
 }
 
 .custom-search-bar {
-  width: 300px;
-  height: 37px;
+  width: 200px;
+  height: 30px;
 } 
+
+.spotify-card {
+  box-shadow: 0 0 5px 5px rgb(241, 244, 241);
+}
